k8s/django-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: backend
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: ahmedsalahucf/urlshortner-backend
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: backend
spec:
  selector:
    app: django
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 32000
