k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
spec:
  rules:
  - host: "urlshortner.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-service
            port:
              number: 80
